Fix ResultDisplay bar to have wrap text + more UI changes

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -142,6 +142,15 @@
     -fx-border-radius: 5;
     -fx-background-radius: 10;
 }
+
+.major-label {
+    -fx-background-color: rgb(0,102,102);
+    -fx-min-width: 30;
+    -fx-alignment: center;
+    -fx-background-radius: 3;
+    -fx-padding: 0 2 0 2;
+}
+
 .stack-pane {
      -fx-background-color: derive(#1d1d1d, 20%);
 }
@@ -356,7 +365,8 @@
 }
 
 #tags {
-    -fx-hgap: 7;
+    -fx-padding: 0 0 0 3;
+    -fx-hgap: 3;
     -fx-vgap: 3;
 }
 
@@ -364,7 +374,7 @@
     -fx-text-fill: white;
     -fx-background-color: #3e7b91;
     -fx-padding: 1 3 1 3;
-    -fx-border-radius: 2;
-    -fx-background-radius: 2;
+    -fx-border-radius: 3;
+    -fx-background-radius: 3;
     -fx-font-size: 11;
 }
